2007-03-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_actions/__init__.py:
	* gaupol/gtk/_agents/close.py:
	* gaupol/gtk/_agents/help.py:
	* gaupol/gtk/_agents/menu.py:
	* gaupol/gtk/app.py:
	* gaupol/gtk/dialogs/about.py:
	* gaupol/gtk/dialogs/insert.py:
	* gaupol/gtk/entries.py:
	* gaupol/gtk/page.py:
	* gaupol/gtk/view.py:
	Import util from gaupol.gtk.

2007-02-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/edit.py:
	* gaupol/gtk/cellrend/multiline.py:
	* gaupol/gtk/cellrend/time.py:
	* gaupol/gtk/page.py:
	Fix inconsistensies and segfaults and rest of the shit between the
	cell renderers and the edit agent.

2007-02-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/edit.py:
	* gaupol/gtk/_agents/open.py:
	Add cell editing.

2007-02-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/about.py:
	Strip "http://" from website label.

2007-02-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/format.py:
	* gaupol/gtk/_agents/view.py:
	* gaupol/gtk/app.py:
	Allow UIMAction menu_item callbacks be None.

	* tools/add-changelog:
	Sort files.

2007-02-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/format.py:
	* gaupol/gtk/_actions/format.py:
	* data/ui.xml:
	Add format menu items.

2007-02-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/wrappers.py:
	* gaupol/base/cons.py:
	* data/conf.spec:
	Write constants in configuration file as strings instead of integers.

2007-02-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/menu.py:
	Add Alt+N accelerators for project menu items.

2007-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/pref-dialog.glade:
	Fix preview command fields and expand settings on the file page.

2007-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	Initial svn import of the seija branch leading to 0.8.

2006-12-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	* data/glade/encoding-dialog.glade:
	* data/glade/lang-dialog.glade: